--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-sw": "workbox injectManifest workbox-config.js && workbox copyLibraries build/  && npm run serve"
   },
   "eslintConfig": {
     "extends": "react-app"
